# ecommerce-agent-databricks

./: .gitignore  AGENTS.md  README.md  app.yaml  databricks.yml  pyproject.toml
agent_core/: __init__.py  config_loader.py  config_schema.py  mcp_lifecycle.py  orchestrator.py  prompt_registry.py  retriever_interface.py  skill_interface.py  tool_interface.py  tool_policy.py  uc_toolkit_adapter.py
artifacts/: k8_deepseek_benchmark_2026-07-20.md  s5-01-baseline-manifest.sha256  s5-02-invariant-report.txt  s5-08-streamlit-source-map.md  s5-manual-verification-2026-07-24.md  task_I5_summary.md  task_J5_summary.md  task_S3B-01_summary.md  task_S3B-05_summary.md  task_S4B-01_summary.md  task_S4B-02_summary.md  task_S4B-03_summary.md  task_S4B-04_summary.md  task_S4B-05_summary.md  task_S4B-06_summary.md  task_S4B-07_summary.md  task_S4B-08_summary.md  task_S4B-09_summary.md  task_S4B-10_summary.md  task_S4B-11_summary.md  task_S4B-12_S4B-13_summary.md  task_S4B-15_summary.md  task_c11_summary.md  task_c12_c14_summary.md  task_c8_summary.md  task_e1_e3_e5_summary.md  task_e6_e9_summary.md  task_f1_f3_summary.md  task_s3_A1_A7_summary.md  task_s3_F10_summary.md  task_s3_F8_F11_summary.md  task_s3_F9_summary.md  task_s3_implementation_summary.md  task_s3b_hardening_batch_summary.md  task_s4_runtime_hardening_summary.md  task_s5-01_summary.md  task_s5-02_summary.md  task_s5-03_summary.md  task_s5-04_summary.md  task_s5-05_summary.md  (+19 more)
chat_ui/: biome.json  package-lock.json  package.json  tsconfig.json  vitest.config.ts
data-processing/: CreateDocumentEvalDataset.py  TransformDocumentsData.py  TransformOlistData.py
deepseek_adapter/: __init__.py  adapter.py  benchmark.py  deployment.py
docs/: CERTIFICATION_INDEX.md  PLAN.md  README.md  SPRINT_1_DATABRICKS_DOCS_INDEX.md  chat-ui-event-contract.md  deepseek-ai-gateway-matrix.md  sprint-3-contracts.md  sprint-3-deployment-steps.md  sprint-3b-data-cleanup.md  sprint-4-baseline.md  sprint-4b-browser-auth-checklist.md
tests/: conftest.py  (+3 more)
(+214 files in other folders)
