[project]
name = "ecommerce-agent-databricks"
version = "0.1.0"
description = "Databricks-hosted e-commerce support agent using LangChain 1.x, MLflow 3.x, and the current Databricks Apps + ResponsesAgent stack"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "databricks-langchain==0.20.0",
    "databricks-sdk==0.120.0",
    "langchain>=1.0,<2.0",
    "langchain-core>=1.0,<2.0",
    "mcp>=1.0.0",
    "mlflow>=3.0,<4.0",
    "psycopg-pool>=3.2",
    "psycopg[binary]>=3.2",
    "pydantic>=2.12",
    "pyyaml>=6.0.3",
    "requests>=2.28.0",
    "streamlit>=1.28.0",
    "uvicorn>=0.24.0",
]

[dependency-groups]
data-processing = [
    "databricks-ai-search==0.76",
    "numpy>=2.2,<3.0",
    "pandas>=2.2,<3.0",
    "pyspark>=4.0,<4.3",
    "sentence-transformers>=5.0",
]
dev = [
    "pytest>=9.1.1",
    "pytest-asyncio>=0.21",
    "ruff>=0.15.21",
]

[tool.ruff]
exclude = [
    ".venv",
    ".agents",
    ".git",
    "__pycache__",
    "*.pyc",
    "data-processing",      # Databricks notebooks (spark/display/dbutils are implicit globals)
    "experiments",          # Databricks notebooks
]

[tool.ruff.lint]
ignore = [
    "E402",  # Module-level import not at top of file (Databricks notebook pattern)
]

[tool.pytest.ini_options]
pythonpath = ["."]
asyncio_mode = "auto"
markers = [
    "databricks: requires explicit workspace credentials and enabled resources",
]
